# tokenpack-trainer

./: .gitignore  LICENSE  OOM_AND_BATCHING.md  README.md  pyproject.toml
src/: __init__.py  metrics.py  trainer.py
src/tokenpack_trainer/: __init__.py  collator.py  metrics.py  samplers.py  trainer.py
