[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenpack-trainer"
version = "0.1.0"
description = "Length-bucketed token-packing sampler and HierarchicalTokenTrainer for Hugging Face Transformers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Lee Drake", email = "b.lee.drake@gmail.com" }
]

dependencies = [
  "torch>=2.2",
  "transformers>=4.40",
  "numpy>=1.24",
  "tqdm>=4.60",
]

[project.urls]
Homepage = "https://github.com/leedrake5/tokenpack-trainer"
Issues   = "https://github.com/leedrake5/tokenpack-trainer/issues"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenpack-trainer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy", "torch", "tqdm", "transformers"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tokenpack_trainer*"]
